<resources>
    <string name="app_name">AHand</string>
    <string name="greet">Welcome!!!</string>
    <string name="employee">Employee</string>
    <string name="customer">Customer</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_out">Sign-Out</string>
    <string name="scan">Scan</string>
    <string name="new_info">New Item Info</string>
    <string name="add">Add New Item</string>
    <string name="save">Save New Item</string>
    <string name="cancel">Cancel</string>
    <string name="inspect">Find Product</string>
    <string name="product_info">Product Info</string>
    <string name="edit_product">Edit Product</string>
    <string name="edit">Edit</string>
    <string name="user_info">Customer Info</string>
    <string name="item_info">Item Info</string>
    <string name="basic_info">Basic Info</string>
    <string name="detailed_info">Detailed Info</string>
    <string name="update_item">Update Item</string>
    <string name="back_to_scanner">Back To Scanner</string>
    <string name="user_name">User Name</string>
    <string name="preferred_store">Preferred Store</string>
    <string name="product_name">Product Name</string>
    <string name="product_size">Size:</string>
    <string name="product_qty">Quantity On Hand:</string>
    <string name="product_expire">Expire Date:</string>
    <string name="product_price">Product Price:</string>
    <string name="click_focus">Click when focused</string>
    <string name="back_product">Back To Product</string>
    <string name="back_main">Back To Main</string>
    <string name="hello">Hello</string>
    <string name="default_name">Guest</string>
    <string name="hint_store_name">preferred store name</string>
    <string name="hint_user_name">type your name</string>
    <string name="item_name">item name</string>
    <string name="item_size">item size</string>
    <string name="item_expire_date">expire date</string>
    <string name="item_barcode">item barcode</string>
    <string name="item_detail_info">item details</string>
    <string name="item_qty">quantity</string>
    <string name="item_price">price</string>
    <string name="path_name" translatable="false">Name</string>
    <string name="path_size" translatable="false">Size</string>
    <string name="path_exp_date" translatable="false">ExpireDate</string>
    <string name="path_barcode" translatable="false">Barcode</string>
    <string name="path_details" translatable="false">DetailsInfo</string>
    <string name="path_qty" translatable="false">Quantity</string>
    <string name="path_price" translatable="false">Price</string>
    <string name="button1" translatable="false">process</string>
    <string name="tut" translatable="false">Tutorial POint</string>
    <string name="code" translatable="false">codeview</string>

</resources>